# Gotong

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG-v1-v2.md  CHANGELOG-v3-dev.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  GOVERNANCE.md  LEARN.md  LICENSE  MAINTAINERS.md  QUICKSTART.md  README.md  SECURITY.md  codex_work_log  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  启动-OpenSpace.command  启动-联邦协作.command  重置-OpenSpace.command
.github/: AUDIT-v3.3.md  CI-DEFERRED.md  PULL_REQUEST_TEMPLATE.md  RELEASE-CHECKLIST.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  live.yml  release.yml  secret-scan.yml  templates.yml
.well-known/: security.txt
audits/: README.md
audits/2026-05-27-codex/: README.md  architecture_alignment.md  audit_findings.json  code_quality.md  delivery_note.md  findings.md  verification.md
audits/2026-05-31-codex-goal-audit/: README.md  findings.md  remediation.md  verification.md
caddy/: Caddyfile
deploy/: .env.cloud  .env.home  AipeHub.command  AipeHub.sh  Gotong.command  Gotong.sh  README.md  cloud-quickstart.sh
docs/: AGENT.md  ARCHITECTURE.md  COMMUNITY-DISCUSSIONS.md  COMMUNITY-SITE.md  COMPETITIVE-LANDSCAPE.md  DEPLOY.md  FEDERATION-RUNBOOK.md  FEDERATION.md  FLAGSHIP-TEMPLATES.md  HUMAN.md  LICENSE-FAQ.md  MCP.md  MONITORING.md  OPERATIONS.md  OVERVIEW.md  PERFORMANCE.md  PRODUCT-MATRIX.md  PROTOCOL.md  RECOGNITION-SYSTEM.md  SIDECAR.md  TEMPLATES.md  enablement-flow-case-conversation-plan.md  federation-services-rfc.md  plugin-sandbox-rfc.md  service-call-streaming-rfc.md  services-over-ws-rfc.md  services-rfc.md
docs/es/: CHARTER.md  CODE_OF_CONDUCT.md  COMMUNITY-DISCUSSIONS.md  COMMUNITY-SITE.md  COMPETITIVE-LANDSCAPE.md  CONTRIBUTING.md  CONTRIBUTORS.md  FLAGSHIP-TEMPLATES.md  GOVERNANCE.md  LEARN.md  LICENSE-FAQ.md  MAINTAINERS.md  OVERVIEW.md  PRODUCT-MATRIX.md  README.md  RECOGNITION-SYSTEM.md  SECURITY.md
docs/fr/: CHARTER.md  CODE_OF_CONDUCT.md  COMMUNITY-DISCUSSIONS.md  COMMUNITY-SITE.md  COMPETITIVE-LANDSCAPE.md  CONTRIBUTING.md  CONTRIBUTORS.md  FLAGSHIP-TEMPLATES.md  GOVERNANCE.md  LEARN.md  LICENSE-FAQ.md  MAINTAINERS.md  OVERVIEW.md  PRODUCT-MATRIX.md  README.md  RECOGNITION-SYSTEM.md  SECURITY.md
docs/ja/: CHARTER.md  CODE_OF_CONDUCT.md  COMMUNITY-DISCUSSIONS.md  COMMUNITY-SITE.md  COMPETITIVE-LANDSCAPE.md  GOVERNANCE.md  (+11 more)
monitoring/: README.md  docker-compose.yml
python-sdk/: README.md  pyproject.toml
python-sdk/src/aipehub/: __init__.py  agent.py  protocol.py  services.py  session.py
python-sdk/src/aipehub/adapters/: __init__.py  crewai.py  langgraph.py
python-sdk/src/gotong/: __init__.py  agent.py  protocol.py  services.py  session.py
python-sdk/src/gotong/adapters/: __init__.py  crewai.py  langgraph.py
python-sdk/tests/: conftest.py  test_adapters_crewai.py  test_adapters_langgraph.py  test_h11_reject_redaction.py  test_h8_callid_and_h9_task_gc.py  test_handshake.py  test_services.py  test_task_roundtrip.py  test_tls_and_plaintext_auth.py  test_version_consistency.py
scripts/: RECORDING.md  aipe-env-registry.txt  build-personal-growth-templates.mjs  build-portable.mjs  bump-version.mjs  cloud-harden.sh  demo-60s.sh  env-registry-gate.mjs  first-result-smoke.mjs  gotong-env-registry.txt  kernel-deps-gate.mjs  line-budget-gate.mjs  local-onboarding-check.mjs  npx-smoke.mjs  personal-growth-prompts.mjs  publish-readiness-gate.mjs  pypi-pack-gate.mjs  seed-personal-growth-demo.mjs  test-bundle-import.mjs  test-compaction.mjs  test-cross-hub-e2e.mjs  test-decoupling.mjs  test-fresh-space-e2e.mjs  test-hitl.mjs  version-gate.mjs
templates/: CONTRIBUTING.md  README.md
(+634 files in other folders)
