[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipehub"
version = "1.0.0"
description = "AipeHub Python SDK — connect Python agents to an AipeHub Hub over WebSocket."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AipeHub contributors" },
]
keywords = ["agent", "websocket", "aipehub", "orchestration"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aipehub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
