[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gotong"
# Keep in sync with `src/gotong/__init__.py: __version__`. The
# `gotong.protocol.hello` builder reads its `client_version` default
# from `__version__` so all three sources of truth (wheel, dunder,
# wire HELLO) stay aligned automatically — see P5 in the v3.1 audit.
version = "1.1.0"
description = "Gotong Python SDK — connect Python agents to an Gotong Hub over WebSocket."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Gotong contributors" },
]
keywords = ["agent", "websocket", "gotong", "orchestration"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # `tomllib` is stdlib from 3.11 onward; on 3.10 we fall back to
    # the `tomli` backport (same API surface). The environment marker
    # makes the dep a no-op install on 3.11+ — see
    # tests/test_version_consistency.py for the conditional import.
    "tomli>=2.0; python_version < '3.11'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gotong"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
